objects/LAT_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Inicio_da_parceria__c</fullName>
        <label>Início da parceria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY09</fullName>
                </value>
                <value>
                    <fullName>FY10</fullName>
                </value>
                <value>
                    <fullName>FY11</fullName>
                </value>
                <value>
                    <fullName>FY12</fullName>
                </value>
                <value>
                    <fullName>Planejado</fullName>
                </value>
                <value>
                    <fullName>FY13</fullName>
                </value>
                <value>
                    <fullName>FY14</fullName>
                </value>
                <value>
                    <fullName>FY15</fullName>
                </value>
                <value>
                    <fullName>FY16</fullName>
                </value>
                <value>
                    <fullName>FY17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inicio_da_vigencia__c</fullName>
        <label>Início da vigência</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inscriao_Estadual__c</fullName>
        <formula>Account__r.State_Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inscrição Estadual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investimento__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Investimento</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Investimento_maximo_sugerido__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Investimento máximo sugerido</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jameson_Standard_periodo__c</fullName>
        <formula>Volume_Jameson_Standard__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jameson Standard contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_Black_periodo__c</fullName>
        <formula>Volume_Jim_Beam_Black__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jim Beam Black contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_White_periodo__c</fullName>
        <formula>Volume_Jim_Beam_White__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jim Beam White contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_de_visibilidade__c</fullName>
        <label>KPI de visibilidade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kahlua_periodo__c</fullName>
        <formula>Volume_Kahlua__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kahlúa contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Add_months_Report1__c</fullName>
        <formula>EndDate__c + (Prazo_de_prorrogacao_meses__c * 30.4166)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAT BR Add months Report1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BR_RealValidityDate__c</fullName>
        <label>Real Validity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastApprovedDate__c</fullName>
        <label>LastApprovedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Licor_Kahlua__c</fullName>
        <label>Licor - Kahlua</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licor_Ricard__c</fullName>
        <label>Licor - Ricard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_para_impress_o_do_contrato_padr_o__c</fullName>
        <formula>HYPERLINK(&quot;servlet/servlet.FileDownload?file=015300000027V7u&quot;,&quot;Contrato de parceria comercial On-Trade&quot;)</formula>
        <label>Link para impressão do contrato padrão</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Malibu_Nacional_periodo__c</fullName>
        <formula>Volume_Malibu_Nacional__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Malibu Nacional contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margem_CAAP_GD__c</fullName>
        <label>Margem CAAP Gráfico Decisão</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margem_CAAP_GS__c</fullName>
        <label>Margem CAAP Gráfico Spider</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margem_CAAP__c</fullName>
        <formula>ROI_Margem_CAAP_Texto__c</formula>
        <label>Margem CAAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Funcional_Comentario__c</fullName>
        <label>Material Funcional - Comentário</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <inlineHelpText>Ex: Canudos, Copos, etc</inlineHelpText>
        <label>Material Funcional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MensagemIntegracao__c</fullName>
        <label>Mensagem Integração</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Montilla_Cristal_periodo__c</fullName>
        <formula>Volume_Montilla_Cristal__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montilla Cristal contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motivo_de_alteracao__c</fullName>
        <label>Motivo de alteração</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alteração do número de eventos</fullName>
                </value>
                <value>
                    <fullName>Alteração do quadro societário da empresa</fullName>
                </value>
                <value>
                    <fullName>Alteração dos produtos do contrato</fullName>
                </value>
                <value>
                    <fullName>Proposta da concorrência</fullName>
                </value>
                <value>
                    <fullName>Renegociação de contrapartidas</fullName>
                </value>
                <value>
                    <fullName>Outros (descrever)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_de_cancelamento_do_contrato__c</fullName>
        <label>Motivo de cancelamento do contrato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fechamento da casa</fullName>
                </value>
                <value>
                    <fullName>Contrato com a concorrência</fullName>
                </value>
                <value>
                    <fullName>Descumprimento de cláusula contratual</fullName>
                </value>
                <value>
                    <fullName>Outros (descrever)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_de_nao_aprovacao__c</fullName>
        <label>Motivo de não aprovação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposta não aprovada</fullName>
                </value>
                <value>
                    <fullName>Alto risco</fullName>
                </value>
                <value>
                    <fullName>Cláusulas não aprovadas</fullName>
                </value>
                <value>
                    <fullName>Cliente insatisfeito com o contrato atual</fullName>
                </value>
                <value>
                    <fullName>Contrato com a concorrência</fullName>
                </value>
                <value>
                    <fullName>Desacordo em relação aos acordos comerciais</fullName>
                </value>
                <value>
                    <fullName>Desacordo em relação às contrapartidas</fullName>
                </value>
                <value>
                    <fullName>Descumprimento de cláusula contratual</fullName>
                </value>
                <value>
                    <fullName>Fechamento da casa</fullName>
                </value>
                <value>
                    <fullName>Fechamento de contrato com a concorrência</fullName>
                </value>
                <value>
                    <fullName>Inconsistência jurídica</fullName>
                </value>
                <value>
                    <fullName>Outros (descrever)</fullName>
                </value>
                <value>
                    <fullName>PRB insatisfeita com o contrato atual</fullName>
                </value>
                <value>
                    <fullName>Risco para a Pernod Ricard</fullName>
                </value>
                <value>
                    <fullName>Sem justificativa</fullName>
                </value>
                <value>
                    <fullName>Perfil do cliente não adequado</fullName>
                </value>
                <value>
                    <fullName>Volume potencial baixo</fullName>
                </value>
                <value>
                    <fullName>Alto risco de investimento</fullName>
                </value>
                <value>
                    <fullName>Não atendimento ao ROI</fullName>
                </value>
                <value>
                    <fullName>Cliente Inadimplente</fullName>
                </value>
                <value>
                    <fullName>Contrato com alto risco Jurídico</fullName>
                </value>
                <value>
                    <fullName>Valor negociado em desacordo</fullName>
                </value>
                <value>
                    <fullName>Documentação Insuficiente/Incompleta</fullName>
                </value>
                <value>
                    <fullName>Outros / comentários</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mumm_Champagne_periodo__c</fullName>
        <formula>Volume_Mumm_Champagne__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mumm Champagne contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Espumante_periodo__c</fullName>
        <formula>Volume_Mumm_Espumante__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mumm Espumante contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_Cobranca__c</fullName>
        <formula>Account__r.Revenue_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nº de Faturamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Contract Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_periodo__c</fullName>
        <formula>Volume_Natu_Nobilis__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Natu Nobilis contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nome_Fantasia__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Fantasia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_concorrente__c</fullName>
        <label>Nome do concorrente</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_Contrato_impressao__c</fullName>
        <formula>if( isblank(Contrato_original__c ),  ContractNumber__c , Contrato_original__r.ContractNumber__c &amp; &quot;-&quot; &amp;  ContractNumber__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de Contrato Impressão</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_do_contrato__c</fullName>
        <formula>IF(OR(ISNULL(Numero_do_contrato_versao__c), Numero_do_contrato_versao__c=0),
   &quot;&quot;,
   IF(AND(ISPICKVAL(Tipo_de_contrato__c,&quot;Contrato&quot;),NOT(ISPICKVAL(Status__c  ,&quot;Ativo&quot;))), &quot;P&quot; &amp;   Contrato_original__r.ContractNumber__c  ,&quot;C&quot; &amp; Contrato_original__r.ContractNumber__c &amp; &quot; V&quot;+TEXT(Numero_do_contrato_versao__c)&amp;&apos; - [&apos;))
&amp; IF(AND(ISPICKVAL(Tipo_de_contrato__c,&quot;Contrato&quot;),NOT(ISPICKVAL(Status__c  ,&quot;Ativo&quot;))), &quot;P&quot; &amp; ContractNumber__c,&quot;C&quot; &amp; ContractNumber__c
       )  &amp; 
IF(OR(ISNULL(Numero_do_contrato_versao__c), Numero_do_contrato_versao__c=0),
   &quot;&quot;,&apos;]&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número do contrato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_do_contrato_off__c</fullName>
        <label>Número do contrato</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_do_contrato_versao__c</fullName>
        <description>Contém somente a versão do contrato. Para cada alteração de contrato será gerada um novo registro e por conseguinte uma nova versão. O campo Número_do_contrato__c contém a fórmula que em conjunto com este campo mostra o número do contrato e versão.</description>
        <label>Número do contrato versão</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Obs_signatarios__c</fullName>
        <label>Obs. signatários</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Observacoes__c</fullName>
        <label>Observações</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Observacoes_de_visibilidade__c</fullName>
        <label>Observações visibilidade</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Olmeca_periodo__c</fullName>
        <formula>Volume_Olmeca__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Olmeca contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orloff_periodo__c</fullName>
        <formula>Volume_Orloff__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orloff contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outros_descricao__c</fullName>
        <label>Outros (descrição)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outros_descricao_motivo_nao_aprovacao__c</fullName>
        <label>Outros (descrição)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnerExpirationNotice__c</fullName>
        <label>Owner Expiration Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>45 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>120 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pagamento_1a_parcela__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pagamento 1ª parcela</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_LBS_periodo__c</fullName>
        <formula>Volume_Passport_LBS__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passport LBS contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Ambiente_Local1__c</fullName>
        <label>Peças Tailor Made - Ambiente/Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Ambiente_Local2__c</fullName>
        <label>Peças Tailor Made - Ambiente/Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Ambiente_Local3__c</fullName>
        <label>Peças Tailor Made - Ambiente/Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Marcas1__c</fullName>
        <label>Peças Tailor Made - Marcas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Marcas2__c</fullName>
        <label>Peças Tailor Made - Marcas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Marcas3__c</fullName>
        <label>Peças Tailor Made - Marcas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Observacao1__c</fullName>
        <label>Peças Tailor Made - Observação</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Observacao2__c</fullName>
        <label>Peças Tailor Made - Observação</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Observacao3__c</fullName>
        <label>Peças Tailor Made - Observação</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pecas_Tailor_Made_Quantidade__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Peças Tailor Made - Quantidade</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentual_CAAP__c</fullName>
        <label>CAAP % (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentual_KPI_financeiro_ROI__c</fullName>
        <label>% KPI financeiro (ROI)</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentual_provis_o__c</fullName>
        <label>Percentual provisão</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Perfil_de_imagem__c</fullName>
        <label>Perfil de imagem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High image</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PerrierJouetBelleEpoque15L_pdo_c__c</fullName>
        <formula>Volume_Perrier_Jouet_Belle_Epoque_1_5L__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perrier Jouet Belle Epoque 1,5L contratO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perrier_Jouet_1_5L_periodo__c</fullName>
        <formula>Volume_Perrier_Jouet_1_5L__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perrier-Jouêt 1,5L contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perrier_Jouet_Belle_Epoque_periodo__c</fullName>
        <formula>Volume_Perrier_Jouet_Belle_Epoque__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perrier Jouet Belle Epoque contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perrier_Jouet_Belle_Epq1_5L_periodo__c</fullName>
        <formula>Volume_Perrier_Jouet_Belle_Epq1_5L__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perrier Jouet Belle Epoque 1,5L contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perrier_Jouet_periodo__c</fullName>
        <formula>Volume_Perrier_Jouet__c*ContractTerm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perrier-Jouêt contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Porcentagem_custo_Pernod__c</fullName>
        <formula>ROI_TInvestment__c / ROI_Total_Investimento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custo PRB % (variação)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Porcentagem_custo_Pernod_old__c</fullName>
        <formula>IF(OR(Custo_Pernod_old__c=0, Investimento__c=0),0,Custo_Pernod_old__c / Investimento__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% custo Pernod</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Potencial_de_volume__c</fullName>
        <formula>IF ( Volume_do_contrato_CA__c &lt;=2160,&quot;Baixo Potencial de Volume&quot;,
     IF(  Volume_do_contrato_CA__c  &lt;=10080, &quot;Médio Potencial de Volume&quot;, &quot;Alto Potencial de Volume&quot;))</formula>
        <label>Potencial de volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prateleiras_dos_Bares__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>% Produtos Pernod.</inlineHelpText>
        <label>Prateleiras dos Bares</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prazo_carta_de_nao_renovacao__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prazo carta de não renovação</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prazo_de_prorrogacao_meses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prazo de prorrogação (meses)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prazo_indeterminado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prazo indeterminado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preve_pagamento_em_dinheiro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevê pagamento em dinheiro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Champagne__c</fullName>
        <label>Champagne</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Espumantes__c</fullName>
        <label>Espumantes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Rum_Importado__c</fullName>
        <label>Rum Importado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Rum_Nacional__c</fullName>
        <label>Rum Nacional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Tequila_S_Premium__c</fullName>
        <label>Tequila Super Premium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Tequila_Std__c</fullName>
        <label>Tequila Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Vinhos__c</fullName>
        <label>Vinhos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Vodka_Super_Premium__c</fullName>
        <label>Vodka Super Premium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Vodkas_Importadas__c</fullName>
        <label>Vodkas Importadas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Vodkas_Nacionais__c</fullName>
        <label>Vodkas Nacionais</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Whiskie_Americano__c</fullName>
        <label>Whiskie Americano</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Whiskie_Irlandes__c</fullName>
        <label>Whiskie Irlandês</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Whisky_12_anos__c</fullName>
        <label>Whisky 12 anos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Whisky_Engarrafado__c</fullName>
        <label>Whisky Engarrafado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Whisky_Nacional__c</fullName>
        <label>Whisky Nacional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prioridade_venda_Whisky_Std__c</fullName>
        <label>Whisky Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>